test/should_not_compile/typevar_unification.sml
val f = fn (x : 'a) => x : int; (* 'a cannot be unified with int *)
